--- a/requirements.txt
+++ b/requirements.txt
@@ -9,17 +9,21 @@ bokeh==2.4.3
 cachetools==5.2.0
 certifi==2022.6.15.1
 charset-normalizer==2.1.1
+clean-text==0.6.0
+cleantext==1.1.4
 click==8.1.3
 commonmark==0.9.1
 cycler==0.11.0
 debugpy==1.6.3
 decorator==5.1.1
 docopt==0.6.2
+emoji==1.7.0
 emot==3.1
 entrypoints==0.4
 executing==1.1.0
 filelock==3.8.0
 fonttools==4.37.1
+ftfy==6.1.1
 gitdb==4.0.9
 GitPython==3.1.27
 idna==3.3
