--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+absl-py==1.3.0
 altair==4.2.0
 appnope==0.1.3
 asttokens==2.0.8
+astunparse==1.6.3
 attrs==22.1.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
@@ -22,10 +24,18 @@ emot==3.1
 entrypoints==0.4
 executing==1.1.0
 filelock==3.8.0
+flatbuffers==22.9.24
 fonttools==4.37.1
 ftfy==6.1.1
+gast==0.4.0
 gitdb==4.0.9
 GitPython==3.1.27
+google-auth==2.13.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.50.0
+h5py==3.7.0
+huggingface-hub==0.10.1
 idna==3.3
 importlib-metadata==4.12.0
 ipykernel==6.15.3
@@ -38,14 +48,20 @@ jsonschema==4.16.0
 jupyter-core==4.11.1
 jupyter_client==7.3.5
 jupyterlab-widgets==3.0.3
+keras==2.10.0
+Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
+libclang==14.0.6
 lxml==4.9.1
+Markdown==3.4.1
 MarkupSafe==2.1.1
 matplotlib==3.5.3
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.5
 nltk==3.7
 numpy==1.23.3
+oauthlib==3.2.2
+opt-einsum==3.3.0
 packaging==21.3
 pandas==1.4.4
 parso==0.8.3
@@ -55,11 +71,13 @@ Pillow==9.2.0
 pipreqs==0.4.11
 plotly==5.10.0
 prompt-toolkit==3.0.31
-protobuf==3.20.1
+protobuf==3.19.6
 psutil==5.9.2
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==9.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pydeck==0.7.1
 Pygments==2.13.0
 Pympler==1.0.1
@@ -73,7 +91,10 @@ PyYAML==6.0
 pyzmq==24.0.1
 regex==2022.9.13
 requests==2.28.1
+requests-oauthlib==1.3.1
 rich==12.5.1
+rsa==4.9
+sacremoses==0.0.53
 scikit-learn==1.1.2
 scipy==1.9.1
 seaborn==0.12.0
@@ -87,20 +108,33 @@ stack-data==0.5.1
 streamlit==1.12.2
 streamlit-lottie==0.0.3
 tenacity==8.1.0
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
+tensorflow-io-gcs-filesystem==0.27.0
+termcolor==2.0.1
 textblob==0.17.1
 threadpoolctl==3.1.0
+tokenizers==0.13.1
 toml==0.10.2
 toolz==0.12.0
+torch==1.12.1
+torchvision==0.13.1
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.4.0
+transformers==4.23.1
 typing_extensions==4.3.0
 tzdata==2022.2
 tzlocal==4.2
 urllib3==1.26.12
 validators==0.20.0
 wcwidth==0.2.5
+Werkzeug==2.2.2
 widgetsnbextension==4.0.3
 wordcloud==1.8.2.2
+wrapt==1.14.1
 yarg==0.1.9
 zipp==3.8.1
