--- a/requirements.txt
+++ b/requirements.txt
@@ -125,7 +125,7 @@ torchvision==0.13.1
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.4.0
-transformers==4.23.1
+transformers
 typing_extensions==4.3.0
 tzdata==2022.2
 tzlocal==4.2
